--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=UnifrakturMaguntia&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Grenze:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -39,3 +39,13 @@ svg path{
         stroke-dashoffset: 0;
     }
 }
+.cart-container {
+    position: absolute;
+    top: 20%;
+    right: 10%;
+    background: white;
+    border: 2px solid black;
+    padding: 20px;
+    z-index: 1000;
+  }
+  
